Bug 513307 - Some context menu sub-menus in Plasma have square corners, and are also visually broken even worse when menu translucency is turned on in the Breeze QStyle
Summary: Some context menu sub-menus in Plasma have square corners, and are also visua...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.4
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 513462 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-12-13 17:35 UTC by agarplayerarlon
Modified: 2026-01-22 17:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
screenshot of the issue (198.85 KB, image/png)
2025-12-13 17:35 UTC, agarplayerarlon
Details
issue visible even without transparency (71.33 KB, image/png)
2025-12-17 00:57 UTC, agarplayerarlon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description agarplayerarlon 2025-12-13 17:35:23 UTC
Created attachment 187590 [details]
screenshot of the issue

SUMMARY
I've noticed that if I right click on the Dolphin entry on the taskbar when it's not open, and I hover over either the "Remote" or "Recent" options, then the context menu that they create is broken with a black squared background, I'm attaching a screenshot of it.

STEPS TO REPRODUCE
1. Have dolphin closed
2. Right click on the Dolphin icon on the taskbar
3. Hover over either the "Remote" or "Recent" options with the mouse cursor

OBSERVED RESULT
Their context menu is broken with a black squared background

EXPECTED RESULT
The context menus should follow the breeze theme

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora KDE 43
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Comment 1 agarplayerarlon 2025-12-14 12:49:58 UTC
btw I've noticed that this issue was introduced with plasma 6.5, because I've just tested 6.4.5 and it didn't have this issue
Comment 2 agarplayerarlon 2025-12-14 14:33:46 UTC
this is also happening on KDE Linux with the Plasma 6.6 dev version
Comment 3 Nate Graham 2025-12-16 22:50:04 UTC
Can reproduce with menu translucency turned on in the Breeze QStyle. 100% reproducible for me with the "Remote", "Recent", and "Devices" sub-menus in the context menu of a pinned-but-not-running icon for Dolphin.

The background of the desktop context menu is broken too, but in s different way: it's missing the blur entirely.

Context menus of desktop files and folders are fine, though.
Comment 4 agarplayerarlon 2025-12-17 00:47:31 UTC
(In reply to Nate Graham from comment #3)
> 100% reproducible for me with the "Remote", "Recent", and "Devices" 

I forgot to add that I can see the issue even without the translucency turned on because I can still see the black squared corners
Comment 5 agarplayerarlon 2025-12-17 00:57:22 UTC
Created attachment 187714 [details]
issue visible even without transparency
Comment 6 Nate Graham 2025-12-19 17:23:02 UTC
*** Bug 513462 has been marked as a duplicate of this bug. ***
Comment 7 Bug Janitor Service 2026-01-21 17:22:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3469
Comment 8 Marco Martin 2026-01-22 10:48:05 UTC
Git commit 9778308e6057f4d6e29752fa3a1fbbae81cc5139 by Marco Martin.
Committed on 22/01/2026 at 09:37.
Pushed by mart into branch 'master'.

applets/taskmanager: ensure submenus have translucent background

When creating a qmenu by hand, it needs to make sure it has the
Qt::WA_TranslucentBackground attribute, as PlasmaExtraComponent Menu
has, or it won't render correctly

M  +4    -0    applets/taskmanager/backend.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/9778308e6057f4d6e29752fa3a1fbbae81cc5139
Comment 9 Marco Martin 2026-01-22 10:48:53 UTC
Git commit 83bce690dab6952ce186bf4fbadfd80881e14d90 by Marco Martin.
Committed on 22/01/2026 at 10:48.
Pushed by mart into branch 'Plasma/6.6'.

applets/taskmanager: ensure submenus have translucent background

When creating a qmenu by hand, it needs to make sure it has the
Qt::WA_TranslucentBackground attribute, as PlasmaExtraComponent Menu
has, or it won't render correctly


(cherry picked from commit 9778308e6057f4d6e29752fa3a1fbbae81cc5139)

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +4    -0    applets/taskmanager/backend.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/83bce690dab6952ce186bf4fbadfd80881e14d90