applets/taskmanager: ensure submenus have translucent background

When creating a qmenu by hand, it needs to make sure it has the
Qt::WA_TranslucentBackground attribute, as PlasmaExtraComponent Menu
has, or it won't render correctly

BUG:513307


(cherry picked from commit 9778308e6057f4d6e29752fa3a1fbbae81cc5139)

Co-authored-by: Marco Martin <notmart@gmail.com>